[gd_scene load_steps=4 format=3 uid="uid://usek6rs3tfly"]

[ext_resource type="Script" uid="uid://cfpc132wdw3s6" path="res://scripts/better_confirmation_dialog.gd" id="1_f6eh6"]
[ext_resource type="LabelSettings" uid="uid://7r267pcwb314" path="res://styles/labels/label_content_24.tres" id="2_f6eh6"]
[ext_resource type="LabelSettings" uid="uid://dt6e1w8og3low" path="res://styles/labels/label_content_32.tres" id="3_f6eh6"]

[node name="BetterConfirmationDialog" type="CanvasLayer"]
layer = 5
script = ExtResource("1_f6eh6")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6862745)

[node name="PanelContainer" type="PanelContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -75.0
offset_right = 86.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("3_f6eh6")
horizontal_alignment = 1

[node name="Content" type="Label" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("2_f6eh6")

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="OKButton" type="Button" parent="ColorRect/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "OK"

[node name="CancelButton" type="Button" parent="ColorRect/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "Cancel"

[connection signal="pressed" from="ColorRect/PanelContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="ColorRect/PanelContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
